Fixed images going off screen in application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,9 @@
  */
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+
+
+.media-left {
+    display: inline-block;
+    margin: 5px;
+}
